--- a/project.html
+++ b/project.html
@@ -160,6 +160,7 @@
 </head>
 <body>
   <nav>
+    <h1>welcome to luxury watch</h1>
   <div class="logo">
     <img src="images/logo.jpg" alt="Luxury Logo" style="height: 40px; vertical-align: middle; margin-right: 20px;">
     Luxury Men's Watches
